cmake_minimum_required(VERSION 3.10)

project(02.SOLID.Design.Principle)

add_subdirectory(01.SingleResponsibilityPrinciple)
add_subdirectory(02.Open-ClosedPrinciple)
add_subdirectory(03.LiskovSubstitutionPrinciple)
add_subdirectory(04.InterfaceSegregationPrinciple)
add_subdirectory(05.DependencyInversionPrinciple)
