cmake_minimum_required(VERSION 3.10)

project(06.Singleton)

add_subdirectory(01.SingletonImplementation)
add_subdirectory(02.ProblemWithSingletonImplementation)
add_subdirectory(03.SingletonInDependencyInjection)
add_subdirectory(04.SingletonLifetimeInDIContainer)
add_subdirectory(05.Monostate)
add_subdirectory(06.Multiton)
